# AboveInfinity

./: .clang-format  .gitignore  CMakeLists.txt  Installation  README.md  license.txt
cmake/: AboveInfinityConfig.cmake.in  AboveInfinityUninstall.cmake  sys_info.h.in
cmake/Macros/: enable_if_supported.cmake
examples/: CMakeLists.txt  README.md
examples/src/: source.cc
experimental/include/Buffers/: PolicyBuffer.h
experimental/include/Buffers/Policies/: CPUMemoryPolicy.h
experimental/include/Tensor/: Tensor.h  TensorWithPolicyFriends.h
experimental/include/Tensor/TensorLayouts/CTLayout/: CTPlane.h  CTPlanes.h
experimental/include/Tensor/TensorPolicies/: CTMemoryAccessPolicy.h  CTPlaneLayoutPolicy.h  CTPlaneManipulationPolicy.h
experimental/include/Utils/: CustomTraits.h
include/: AlignedMemory.h  HardwareFeatures.h  Requirements.h  Tensor.h  TensorLayout.h  TensorOps.h  TensorView.h  aligned_allocator.hpp  assert.hpp  bounds.hpp  concepts.hpp  dense_buffer.hpp  dimensions.hpp  execute.hpp  plane.hpp  planes.hpp  range.hpp  reshape.hpp  shape_transmutation.hpp  sparse_buffer.hpp  stream_io.hpp  strides.hpp  tensor.hpp  utilities.hpp
tests/: CMakeLists.txt  TestAlignedMemory.cc  TestTensorLayout.cc  TestTensorOps.cc  TestTensorView.cc  TestTensors.cc  TestingMacros.h.in
tests/src/: test_aligned_allocator.cpp  test_bounds.cpp  test_dense_buffer.cpp  test_dimensions.cpp  test_execute.cpp  test_plane.cpp  test_planes.cpp  test_range.cpp  test_reshape.cpp  test_shape_transmutation.cpp  test_sparse_buffer.cpp  test_stream_io.cpp  test_strides.cpp  test_tensor.cpp  test_utilities.cpp
