CONFIGURE_FILE(TestingMacros.h.in ${CMAKE_SOURCE_DIR}/tests/TestingMacros.h)

enable_if_supported(CMAKE_CXX_FLAGS "-Og")
enable_if_supported(CMAKE_CXX_FLAGS "-g")
enable_if_supported(CMAKE_CXX_FLAGS "-w")
enable_if_supported(CMAKE_CXX_FLAGS "-Wall")
enable_if_supported(CMAKE_CXX_FLAGS "-Wextra")
enable_if_supported(CMAKE_CXX_FLAGS "-pedantic")
enable_if_supported(CMAKE_CXX_FLAGS "-Wdouble-promotion")
enable_if_supported(CMAKE_CXX_FLAGS "-Wconversion")
enable_if_supported(CMAKE_CXX_FLAGS "-Wsign-conversion")
enable_if_supported(CMAKE_CXX_FLAGS "-Wfloat-conversion")
enable_if_supported(CMAKE_CXX_FLAGS "-Wnon-virtual-dtor")
enable_if_supported(CMAKE_CXX_FLAGS "-Wold-style-cast")

add_executable(testTensorLayout   TestTensorLayout.cc)
add_executable(testAlignedMemory  TestAlignedMemory.cc)
add_executable(testTensors        TestTensors.cc)
add_executable(testTensorView     TestTensorView.cc)
add_executable(testTensorOps      TestTensorOps.cc)

add_test(tensorLayout  testTensorLayout)
add_test(alignedMemory testAlignedMemory)
add_test(tensors       testTensors)
add_test(tensorView    testTensorView)
add_test(tensorOps     testTensorOps)
